[tool.poetry]
name = "learning-log"
version = "0.1.0"
description = ""
authors = ["Iaroslav <GunGalla@gmail.com>"]
readme = "README.md"
packages = [{include = "engine"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
